@@ -11,5 +11,4 @@
   :dev-dependencies [[lein-cljfmt "0.5.7"]]
   :main ^:skip-aot demopar.core
   :target-path "target/%s"
-  :jvm-opts ["--add-modules" "java.xml.bind"]
   :profiles {:uberjar {:aot :all}})
